# medsearch

./: .env-vars-test.yaml  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  app-deployment.yaml  app-service.yaml  db-deployment.yaml  db-pvc.yaml  db-service.yaml  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 07ae42fb5176_create_spl_data_issues_table.py  9145fe789299_create_organizations_table.py  ad8530b7aa2b_create_med_organizations_map_table.py  d50797242e4e_create_spls_table.py  d599bab7caf2_create_meds_table.py  dbffea26af42_create_ingredients_table.py  e54e8f781005_create_med_ingredients_map_table.py  f5ce30c9347f_create_spl_parsing_issues_table.py  ff15ee5210b4_create_med_forms_table.py
local_dev_scripts/: init_local_db.py  load_k8s_vars.py  load_local_env_vars.sh  output_local_env_vars.py
output/: 100_xml_structure.txt  26_xml_response.xml  26_xml_structure.txt  response_1c4ec3cb-b7a4-73c9-e063-6394a90afeda.xml  response_fcb13b21-e4a2-461b-b3cb-0daedc722050.xml
src/medsearch_api/: run_api.py
src/medsearch_api/app/: config.py  custom_types.py  logging.conf  logging_config.py  models.py  run_etl.py
src/medsearch_api/app/dailymed_response/: base_dailymed_response.py  base_xml_response.py  dailymed_client.py  models.py  spl_detail_response.py  (+2 more)
tests/: utils.py
tests/api/database/: test_utils.py
tests/app/database/: test_data_access.py  test_utils.py
tests/app/etl/: test_spl_document.py
tests/dailymed_response/: test_models.py
tests/dailymed_response/fixtures/: mock_spl_list_response.json
(+8 files in other folders)
